ENH: add feature importance

--- a/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_2-Housing_Example.ipynb
+++ b/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_2-Housing_Example.ipynb
@@ -1130,6 +1130,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Display Feature Importance "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "feature_importances = random_search.best_estimator_.feature_importances_\n",
+    "extra_features = ['avg_rooms', 'population_per_house', 'avg_bedrooms']\n",
+    "category_encoder = pipeline.named_transformers_['categorical']\n",
+    "category_one_hot_features = list(category_encoder.categories_[0])\n",
+    "attributes = (numerical_features.to_list()\n",
+    "              + extra_features\n",
+    "              + category_one_hot_features)\n",
+    "\n",
+    "sorted(zip(feature_importances, attributes), reverse=True)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
