ENH: add test set evaluation

--- a/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_2-Housing_Example.ipynb
+++ b/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_2-Housing_Example.ipynb
@@ -1130,6 +1130,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluate_hyperparameter_search(random_search.cv_results_)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1157,12 +1166,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Evaluate Test Set"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "evaluate_hyperparameter_search(random_search.cv_results_)"
+    "final_model = random_search.best_estimator_\n",
+    "x_test_prepared = pipeline.transform(x_test)\n",
+    "test_predictions = final_model.predict(x_test_prepared)\n",
+    "\n",
+    "final_mse = mean_squared_error(y_test, test_predictions)\n",
+    "final_rmse = np.sqrt(final_mse)\n",
+    "\n",
+    "print(f'MSE = {final_mse}\\nRMSE = {final_rmse}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### RMSE Interpretation\n",
+    "- Train Set = 44127\n",
+    "- Test Set = 44954\n",
+    "\n",
+    "The model generalized to new data very well."
    ]
   }
  ],
