ENH: add 95% Confidence

--- a/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_2-Housing_Example.ipynb
+++ b/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_2-Housing_Example.ipynb
@@ -1199,6 +1199,35 @@
     "\n",
     "The model generalized to new data very well."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Model 95% Confidence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "confidence = 0.95\n",
+    "squared_errors = (test_predictions - y_test)**2\n",
+    "np.sqrt(stats.t.interval(confidence,\n",
+    "                         len(squared_errors) - 1,\n",
+    "                         loc=squared_errors.mean(),\n",
+    "                         scale=stats.sem(squared_errors)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**With 95% Confidence the model will be at worst $47,014 from the actual value.**"
+   ]
   }
  ],
  "metadata": {
