ENH: add business logic documentation

--- a/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_2-Housing_Example.ipynb
+++ b/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_2-Housing_Example.ipynb
@@ -11,7 +11,33 @@
    "source": [
     "# Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow\n",
     "\n",
-    "## Chapter 2: Housing Example"
+    "## Chapter 2: Housing Example\n",
+    "\n",
+    "### Goal\n",
+    "Develope a model that will output the median housing price per district.\n",
+    "This will be the signal for another ML system that will determine whether or not to investst in property located in the district.\n",
+    "\n",
+    "### Output\n",
+    "Median housing price per district with units of dollars.\n",
+    "\n",
+    "### Current Solution\n",
+    "The district housing prices re currently estimated manually by experts: a team gathers information about a district, and when they cannot get the median housing price, they estimate it using complex rules.\n",
+    "- Costly processs\n",
+    "- Time consuming\n",
+    "- Estimates are usually missed by more than 20%\n",
+    "\n",
+    "### Frame the Problem\n",
+    "- Supervised: labeled data\n",
+    "- Multiple Regression: multiple features\n",
+    "- Univariate: single output\n",
+    "- Batch Learning: data is not being updated and all data will fit in memory\n",
+    "\n",
+    "### Performance Measure\n",
+    "- Root Mean Square Error (RMSE)\n",
+    "    - Euclidean norm\n",
+    "    - $l_2$ norm\n",
+    "    - Fewer large errors will be penalized higher than multiple small errors\n",
+    "$$RMSE(X,h) = \\sqrt{\\frac{1}{m}\\sum^m_{i=1}\\left(h(x^{(i)}) - y^{(i)}\\right)^2}$$"
    ]
   },
   {
@@ -196,15 +222,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d.isna().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "d.head()"
    ]
   },
@@ -218,12 +235,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Missing Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Categorical Features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "d['ocean_proximity'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Distributions"
    ]
   },
   {
@@ -234,6 +281,24 @@
    "source": [
     "d.hist(bins=50, figsize=(20, 15))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Findings\n",
+    "1. Median Income has been scaled, clipped, capped, and is not measured in dollars.\n",
+    "    - Each value is roughly tens of thousands of dollars.\n",
+    "    - Clipped low bound at 0.4999\n",
+    "    - Capped upper bound at 15.0001\n",
+    "1. Median Age is capped\n",
+    "1. Median Hose Value is capped\n",
+    "    - This is the label for the data\n",
+    "    - Could cause an issue\n",
+    "1. Attributes have very different scales\n",
+    "1. Many distributions are tail heavy\n",
+    "    - May cause algorithm issues"
    ]
   },
   {
@@ -764,15 +829,6 @@
    "metadata": {},
    "source": [
     "### Column Transformations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "categorical_features"
    ]
   },
   {
