DOC: add documentation to example 2
- Split Dataset
- Scatter Matrix
- Attribute Combinations
- Numerical Transformations
- Column Transformations

--- a/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_2-Housing_Example.ipynb
+++ b/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_2-Housing_Example.ipynb
@@ -320,7 +320,11 @@
     "    - Any retraining will involve all the data so tracking the split is not required.\n",
     "- Online Training\n",
     "    - As long as each mini-batch was prepared with the same stratified split and no instances were repeated the data could be injested for training.\n",
-    "    - The training set would have to grow with each new load of data."
+    "    - The training set would have to grow with each new load of data.\n",
+    "    \n",
+    "*Stratified Sampling*:\n",
+    "- The population is divided into homogeneous subgroups called *strata*, and the right number of instances are sampled from each stratum to guarantee that the test set is representative of the overall population.\n",
+    "- It is important to have a sufficient number of instances in your dataset for each stratum, or else the estimate of the stratum's importance may be biased."
    ]
   },
   {
@@ -526,7 +530,15 @@
    "source": [
     "---\n",
     "\n",
-    "## Scatter Matrix"
+    "## Scatter Matrix\n",
+    "\n",
+    "*Pearson's r Correlation*\n",
+    "- Only measures linear correlations\n",
+    "- Use ***method*** attribute to change correlation algorithm\n",
+    "    - pearson\n",
+    "    - kendall\n",
+    "    - spearman\n",
+    "    - user defined callable"
    ]
   },
   {
@@ -584,7 +596,9 @@
    "source": [
     "---\n",
     "\n",
-    "## Effect of Median Income"
+    "## Effect of Median Income\n",
+    "\n",
+    "Further investigate the most promising feature."
    ]
   },
   {
@@ -715,7 +729,12 @@
     "    - transform()\n",
     "    - fit_transform()\n",
     "- Inheriting TransformerMixin will define fit_transform() method.\n",
-    "- Inheriting BaseEstimator will define get_params() and set_params() methods."
+    "- Inheriting BaseEstimator will define get_params() and set_params() methods.\n",
+    "\n",
+    "It may be worthwhile to transform features with long tails by computing their logarithm.\n",
+    "\n",
+    "**NOTE**:\n",
+    "After getting the pipeline running come back to this step and pursue better features."
    ]
   },
   {
@@ -806,7 +825,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Numerical Transformations"
+    "### Numerical Transformations\n",
+    "\n",
+    "- `imputer`: fills in missing data using the defined strategy.\n",
+    "- `combined_features`: add the custom features defined by the `CombinedFeatures` class.\n",
+    "- `min_max_scaler`: all feature values are rescaled to be between 0 and 1.\n",
+    "    - If `standardization`, subtract the mean and divide by the standard deviation to yield a distribution with unit variance, were employed the values would not be bound. This ***may*** cause certain algorithms problems, but is much less affected by outliers. Reference Scikit-Learn `StandardScaler`."
    ]
   },
   {
@@ -828,7 +852,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Column Transformations"
+    "### Column Transformations\n",
+    "\n",
+    "- Apply `OneHotEncoder` to categorical_features.\n",
+    "    - If categorical attributes have a large number of possible categories `OneHotEncoding` will result in a large number of input features. If this occurs consider replacing the categorical feature with a numerical embedding feature related to the category."
    ]
   },
   {
