ENH: add ROC curve

--- a/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_3-Classification.ipynb
+++ b/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_3-Classification.ipynb
@@ -30,9 +30,12 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
     "from sklearn.datasets import fetch_openml\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.linear_model import SGDClassifier\n",
-    "from sklearn.metrics import confusion_matrix, f1_score, precision_recall_curve, precision_score, recall_score\n",
+    "from sklearn.metrics import (confusion_matrix, f1_score, precision_recall_curve,\n",
+    "    precision_score, recall_score, roc_auc_score, roc_curve)\n",
     "from sklearn.model_selection import cross_val_predict, cross_val_score\n",
     "\n",
     "from tensorflow_2.exceptions import InputError"
@@ -133,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "binary_value = 4\n",
+    "binary_value = 5\n",
     "y_train_binary = y_train == binary_value\n",
     "y_test_binary = y_test == binary_value\n",
     "\n",
@@ -367,13 +370,12 @@
     "    np.c_[precisions[:-1], recalls[:-1]],\n",
     "    index=thresholds,\n",
     "    columns=['Precision', 'Recall'],\n",
-    ")\n",
-    "df.index.name='Threshold'\n",
+    ").rename_axis('Threshold')\n",
     "\n",
     "fig = px.line(df, title='Precision & Recall vs Threshold')\n",
     "fig.show()\n",
     "\n",
-    "fig = px.line(df, x='Recall', y='Precision', title='Precision vs Threshold')\n",
+    "fig = px.line(df, x='Recall', y='Precision', title='Precision vs Recall')\n",
     "fig.show()"
    ]
   },
@@ -416,11 +418,119 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random Forest Classifier\n",
+    "\n",
+    "- `RandomForestClassifier` does not have a `decision_funtions()` method\n",
+    "- use the `predict_proba()` method\n",
+    "    - returns an array containing a row per instance and a column per class, each containing the probability that the given instance belongs to the given class."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rf_classifier = RandomForestClassifier(random_state=42)\n",
+    "y_probas_rf = cross_val_predict(rf_classifier, x_train, y_train_binary,\n",
+    "                                cv=3, method=\"predict_proba\")\n",
+    "y_scores_rf = y_probas_rf[:, 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Find the Threshold to Acheive 90% Precision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "precisions_rf, recalls_rf, thresholds_rf = precision_recall_curve(\n",
+    "    y_train_binary, y_scores_rf)\n",
+    "treshold_90_precision_rf = thresholds_rf[np.argmax(precisions_rf >= 0.9)]\n",
+    "y_train_pred_90_rf = y_scores_rf >= treshold_90_precision_rf\n",
+    "\n",
+    "precision_rf, recall_rf = [f(y_train_binary, y_train_pred_90_rf)\n",
+    "                           for f in (precision_score, recall_score)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "precision_rf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recall_rf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Receiver Operating Characteristic (ROC)\n",
+    "\n",
+    "- similar to the precision vs recall curve\n",
+    "- true positive rate (TPR) vs false positive rate (TNR)\n",
+    "    - TPR is another name for ***Recall***\n",
+    "    - FPR is the ratio of negative instances that are incorrectly classified as positive.\n",
+    "    - FPR is equal to 1 - true negative rate (TNR)\n",
+    "- Sensitivity vs 1 - Specificity\n",
+    "\n",
+    "$$TPR = Recall = \\frac{TP}{TP + FN}$$\n",
+    "$$FPR = 1 - TNR = 1 - Specificity = 1 - \\frac{TN}{TN + FP}$$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fpr, tpr, thresholds = roc_curve(y_train_binary, decision_function_scores)\n",
+    "auc = roc_auc_score(y_train_binary, decision_function_scores)\n",
+    "threshold = fpr[np.nonzero(tpr == recall)[0]]\n",
+    "\n",
+    "fpr_rf, tpr_rf, thresholds_rf = roc_curve(y_train_binary, y_scores_rf)\n",
+    "auc_rf = roc_auc_score(y_train_binary, y_scores_rf)\n",
+    "threshold_rf = fpr_rf[np.nonzero(tpr_rf == recall_rf)[0]]\n",
+    "\n",
+    "fig = go.Figure()\n",
+    "fig.add_trace(go.Scatter(x=fpr, y=tpr, mode='lines', name='SGD', hovertext=f'AUC: {auc}'))\n",
+    "fig.add_trace(go.Scatter(x=threshold, y=[recall], mode='markers', name='Threshold',\n",
+    "    marker=dict(size=12,)))\n",
+    "\n",
+    "fig.add_trace(go.Scatter(x=fpr_rf, y=tpr_rf, mode='lines', name='RF', hovertext=f'AUC: {auc_rf}'))\n",
+    "fig.add_trace(go.Scatter(x=threshold_rf, y=[recall_rf], mode='markers', name='Threshold',\n",
+    "    marker=dict(size=12,)))\n",
+    "\n",
+    "fig.add_trace(go.Scatter(x=[0, 1], y=[0, 1], mode='lines', name='Random',\n",
+    "    line=dict(color='black', dash='dash')))\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    title='Receiver Operating Characteristic (ROC)',\n",
+    "    xaxis_title='False Positive Rate',\n",
+    "    yaxis_title='True Positive Rate',\n",
+    "    showlegend=False\n",
+    ")\n",
+    "fig.show()"
+   ]
   }
  ],
  "metadata": {
