ENH: add multiclass classification

--- a/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_3-Classification.ipynb
+++ b/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_3-Classification.ipynb
@@ -37,6 +37,9 @@
     "from sklearn.metrics import (confusion_matrix, f1_score, precision_recall_curve,\n",
     "    precision_score, recall_score, roc_auc_score, roc_curve)\n",
     "from sklearn.model_selection import cross_val_predict, cross_val_score\n",
+    "from sklearn.multiclass import OneVsRestClassifier\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.svm import SVC\n",
     "\n",
     "from tensorflow_2.exceptions import InputError"
    ]
@@ -487,7 +490,7 @@
     "### Receiver Operating Characteristic (ROC)\n",
     "\n",
     "- similar to the precision vs recall curve\n",
-    "- true positive rate (TPR) vs false positive rate (TNR)\n",
+    "- true positive rate (TPR) vs false positive rate (FPR)\n",
     "    - TPR is another name for ***Recall***\n",
     "    - FPR is the ratio of negative instances that are incorrectly classified as positive.\n",
     "    - FPR is equal to 1 - true negative rate (TNR)\n",
@@ -514,23 +517,257 @@
     "fig = go.Figure()\n",
     "fig.add_trace(go.Scatter(x=fpr, y=tpr, mode='lines', name='SGD', hovertext=f'AUC: {auc}'))\n",
     "fig.add_trace(go.Scatter(x=threshold, y=[recall], mode='markers', name='Threshold',\n",
-    "    marker=dict(size=12,)))\n",
+    "    marker=dict(size=12,), showlegend=False))\n",
     "\n",
     "fig.add_trace(go.Scatter(x=fpr_rf, y=tpr_rf, mode='lines', name='RF', hovertext=f'AUC: {auc_rf}'))\n",
     "fig.add_trace(go.Scatter(x=threshold_rf, y=[recall_rf], mode='markers', name='Threshold',\n",
-    "    marker=dict(size=12,)))\n",
+    "    marker=dict(size=12,), showlegend=False))\n",
     "\n",
     "fig.add_trace(go.Scatter(x=[0, 1], y=[0, 1], mode='lines', name='Random',\n",
-    "    line=dict(color='black', dash='dash')))\n",
+    "    line=dict(color='black', dash='dash'), showlegend=False))\n",
     "\n",
     "fig.update_layout(\n",
     "    title='Receiver Operating Characteristic (ROC)',\n",
     "    xaxis_title='False Positive Rate',\n",
     "    yaxis_title='True Positive Rate',\n",
-    "    showlegend=False\n",
     ")\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Binary Classification Process Summary\n",
+    "\n",
+    "1. Create an instance of a model\n",
+    "1. Create binary labels for the test data\n",
+    "1. Fit the model to the test data\n",
+    "1. Run Cross-Validation on the test data (`cross_val_score`)\n",
+    "1. Plot Confusion Matrix\n",
+    "1. Calculate Precision (`precision_score`)\n",
+    "1. Calculate Recall (`recall_score`)\n",
+    "1. Calculate F1 (`f1_score`)\n",
+    "1. Plot Precision vs Recall\n",
+    "1. Choose a Threshold\n",
+    "1. Plot ROC Curve with threshold"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Multiclass Classification\n",
+    "\n",
+    "- also call **Multinomial Classifiers**\n",
+    "\n",
+    "| Model                       | Binary Classification | Multiclass Classification |\n",
+    "|:--------------------------- |:---------------------:|:-------------------------:|\n",
+    "| k Nearest Neighbors         | X                     | X                         |\n",
+    "| naive Bayes                 | X                     | X                         |\n",
+    "| Random Forest               | X                     | X                         |\n",
+    "| Stochastic Gradient Descent | X                     | X                         |\n",
+    "| Logistic Regression         | X                     |                           |\n",
+    "| Support Vector Machine      | X                     |                           |\n",
+    "\n",
+    "OvR -> one-versus-the-rest classifier\n",
+    "OvO -> one-versus-one\n",
+    "\n",
+    "Scikit-Learn will use OvR or OvO when a binary classifier is asked to perform multiclass classification.\n",
+    "- `from sklearn.multiclass import OneVsRestClassifier`\n",
+    "- `from sklearn.multiclass import OneVsOneClassifier`\n",
+    "\n",
+    "<br>\n",
+    "<font color='green'>\n",
+    "    The list of target classes is stored in the classes_ attribute.\n",
+    "</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Support Vector Machine Classifier\n",
+    "\n",
+    "<font color='red'>\n",
+    "    Warning:<br>\n",
+    "      45 models will be trained for the default OvO strategy.\n",
+    "      If a GPU is not available the following cell will take a while to execute.\n",
+    "</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_classifier = SVC()\n",
+    "svm_classifier.fit(x_train, y_train)\n",
+    "len(svm_classifier.estimators_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_classifier.predict([x_train[0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_classifier.classes_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_scores = svm_classifier.decision_function([x_train[0]])\n",
+    "svm_scores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Use OvR Stretegy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ovr_svm = OneVsRestClassifier(SVC())\n",
+    "ovr_svm.fit(x_train, y_train)\n",
+    "len(ovr_svm.estimators_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ovr_svm.predict([x_train[0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_classifier.classes_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Stochastic Gradient Descent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sgd_classifier.fit(x_train, y_train)\n",
+    "sgd_classifier.predict([x_train[0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sgd_classifier.decision_function([x_train[0]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### SGD with Cross-Validation\n",
+    "\n",
+    "<br>\n",
+    "<font color='red'>\n",
+    "    <b>\n",
+    "        Make sure to scale the inputs!\n",
+    "    </b>\n",
+    "</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "x_train_scaled = scaler.fit_transform(x_train.astype(np.float64))\n",
+    "cross_val_score(sgd_classifier, x_train_scaled, y_train, cv=3,\n",
+    "                scoring='accuracy')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_val_score(rf_classifier, x_train_scaled, y_train, cv=3,\n",
+    "                scoring='accuracy')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Error Analysis\n",
+    "\n",
+    "- Plot standardized Confusion Matrix\n",
+    "    - Divide each value in the confusion matrix by the number of images in the corresponding class (rows) to view error rates instead of absolute numbers of errors."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Multilabel Classification\n",
+    "\n",
+    "- Output a binary vector indicating each class as either pressent or missing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
