ENH: add data generator

--- a/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras.ipynb
+++ b/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras.ipynb
@@ -93,13 +93,46 @@
     "\n",
     "fig.update_traces(opacity=0.7)\n",
     "fig.update_layout(\n",
-    "    title_text='Dataset Distributions',\n",
+    "    title_text='Dataset Distributions',### Preprocess Data\n",
+    "\n",
+    "im_gen = tf.keras.preprocessing.image.ImageDataGenerator(\n",
+    "    rescale=1/np.iinfo(x_val.dtype).max\n",
+    "    )\n",
+    "\n",
+    "im_gen.flow(x_train, y_train, batch_size=64)\n",
     "    xaxis_title_text='Class',\n",
     "    yaxis_title_text='Count',\n",
     "    bargroupgap=0.1,\n",
     "    barmode='group'\n",
     ")\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preprocess Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "im_gen = tf.keras.preprocessing.image.ImageDataGenerator(\n",
+    "    rescale=1/np.iinfo(x_val.dtype).max\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "im_gen.flow(x_train, y_train, batch_size=64)"
    ]
   }
  ],
