ENH: add class names

--- a/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras.ipynb
+++ b/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras.ipynb
@@ -15,11 +15,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import namedtuple\n",
+    "import concurrent.futures\n",
+    "import hashlib\n",
+    "from pathlib import Path\n",
+    "\n",
+    "import cv2\n",
     "import pandas as pd\n",
     "import plotly.graph_objects as go\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "\n",
+    "from tensorflow_2 import utils"
    ]
   },
   {
@@ -29,6 +37,24 @@
    "outputs": [],
    "source": [
     "tf.__version__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Data = namedtuple('Data', 'features, labels')\n",
+    "\n",
+    "DATA_DIR = utils.package_dir() / 'data'/ 'ch10'"
    ]
   },
   {
@@ -45,10 +71,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(x_train_full, y_train_full), (x_test, y_test) = (keras.datasets.fashion_mnist\n",
-    "                                                  .load_data())\n",
+    "(x_train_full, y_train_full), (x_test, y_test) = (\n",
+    "    tf.keras.datasets.fashion_mnist.load_data()\n",
+    ")\n",
     "print(f'Train Shape: {x_train_full.shape}')\n",
     "print(f'Train Data Type: {x_train_full.dtype}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classes = (\n",
+    "    't-shirt_top',\n",
+    "    'trouser',\n",
+    "    'pullover',\n",
+    "    'dress',\n",
+    "    'coat',\n",
+    "    'sandal',\n",
+    "    'shirt',\n",
+    "    'sneaker',\n",
+    "    'bag',\n",
+    "    'ankle_boot',\n",
+    ")\n",
+    "classes_idx = {n: v for n, v in enumerate(classes)}"
    ]
   },
   {
@@ -70,14 +125,14 @@
     "    test_size=0.1,\n",
     "    random_state=42,\n",
     "    stratify=y_train_full\n",
-    "    )"
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Check Distributions"
+    "### Check Distributions"
    ]
   },
   {
@@ -93,46 +148,18 @@
     "\n",
     "fig.update_traces(opacity=0.7)\n",
     "fig.update_layout(\n",
-    "    title_text='Dataset Distributions',### Preprocess Data\n",
-    "\n",
-    "im_gen = tf.keras.preprocessing.image.ImageDataGenerator(\n",
-    "    rescale=1/np.iinfo(x_val.dtype).max\n",
-    "    )\n",
-    "\n",
-    "im_gen.flow(x_train, y_train, batch_size=64)\n",
-    "    xaxis_title_text='Class',\n",
+    "    title_text='Dataset Distributions',\n",
+    "    xaxis=dict(\n",
+    "        title='Class',\n",
+    "        tickvals=tuple(classes_idx.keys()),\n",
+    "        ticktext=tuple(classes_idx.values()),\n",
+    "    ),\n",
     "    yaxis_title_text='Count',\n",
     "    bargroupgap=0.1,\n",
     "    barmode='group'\n",
     ")\n",
+    "\n",
     "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Preprocess Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "im_gen = tf.keras.preprocessing.image.ImageDataGenerator(\n",
-    "    rescale=1/np.iinfo(x_val.dtype).max\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "im_gen.flow(x_train, y_train, batch_size=64)"
    ]
   }
  ],
